<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/forgot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19999999" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="#0B8E11"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/don_t_worry_we_just_need_your_registered_email_address_and_its_done"
            android:textColor="#E18F15"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/forgot_pwd_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:theme="@style/Progressbar"
            android:hint="@string/provide_your_registered_email_here"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="20dp"
            android:background="@color/btnRed"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_pwd_email" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/check_yout_inbox_after_clicking_the_button_above"
            android:textColor="#070707"
            android:textColorHint="#090909"
            app:layout_constraintStart_toStartOf="@+id/btn_reset_password"
            app:layout_constraintTop_toBottomOf="@+id/btn_reset_password" />

        <TextView
            android:id="@+id/forgot_password_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/go_back"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/Temp_email_box"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/red_mail"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btn_reset_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_pwd_email" />

        <LinearLayout
            android:id="@+id/forgot_password_email_icon_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btn_reset_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_pwd_email">

            <ImageView
                android:id="@+id/forgot_password_mail_box"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/red_mail"
                android:visibility="gone" />

            <TextView
                android:id="@+id/forgot_password_mail_recive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:text="@string/recovery_email_sent_successfully_check_your_inbox"
                android:textColor="@color/successGreen"
                android:visibility="gone" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/forgot_password_progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:theme="@style/Progressbar"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btn_reset_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>